Allow a store owner to configure shipping rates per store ("Shipping by weight" plugin).

--- a/src/Plugins/Shipping.ByWeight/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByWeight/Localization/resources.de-de.xml
@@ -62,4 +62,10 @@
   <LocaleResource Name="AddRecord.Hint">
     <Value>Fügt einen neuen Datensatz zu.</Value>
   </LocaleResource>
+  <LocaleResource Name="Fields.Store">
+    <Value>Shop</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.Store.Hint">
+    <Value>Wird das Sternchen ausgewählt, so wird die Rate auf alle Shops angewandt.</Value>
+  </LocaleResource>
 </Language>
