--- a/src/Plugins/Payments.CashOnDelivery/Localization/resources.en-us.xml
+++ b/src/Plugins/Payments.CashOnDelivery/Localization/resources.en-us.xml
@@ -21,8 +21,13 @@
   <LocaleResource Name="AdditionalFee.Hint">
     <Value>Determines the additional fee.</Value>
   </LocaleResource>
-
-  <LocaleResource Name="PaymentInfoDescription">
+	<LocaleResource Name="AdditionalFeePercentage">
+		<Value>Additional fee. Use percentage</Value>
+	</LocaleResource>
+	<LocaleResource Name="AdditionalFeePercentage.Hint">
+		<Value>Determines whether to apply a percentage additional fee to the order total. If not enabled, a fixed value is used.</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentInfoDescription">
     <Value>
       <![CDATA[
         <p>In cases where an order is placed, an authorized representative will contact you, personally or over telephone, to confirm the order.<br />After the order is confirmed, it will be processed.<br />Orders once confirmed, cannot be cancelled.</p><p>P.S. You can edit this text from admin panel.</p>
