Payment plugin "Invoice" configuration per store. Added option AdditionalFeePercentage.

--- a/src/Plugins/Payments.Invoice/Localization/resources.de-de.xml
+++ b/src/Plugins/Payments.Invoice/Localization/resources.de-de.xml
@@ -21,6 +21,12 @@
   <LocaleResource Name="AdditionalFee.Hint">
     <Value>Bestimmt die Gebühr die dem Kunden für die Nutzung dieser Zahlart berechnet wird.</Value>
   </LocaleResource>
+	<LocaleResource Name="AdditionalFeePercentage">
+		<Value>Zusätzliche Gebühren (prozentual)</Value>
+	</LocaleResource>
+	<LocaleResource Name="AdditionalFeePercentage.Hint">
+		<Value>Zusätzliche prozentuale Gebühr zum Gesamtbetrag. Es wird ein fester Wert verwendet, falls diese Option nicht aktiviert ist.</Value>
+	</LocaleResource>
   <LocaleResource Name="PaymentInfoDescription">
     <Value>
       <![CDATA[
