--- a/src/Plugins/Payments.PayInStore/Localization/resources.de-de.xml
+++ b/src/Plugins/Payments.PayInStore/Localization/resources.de-de.xml
@@ -21,7 +21,13 @@
   <LocaleResource Name="AdditionalFee.Hint">
     <Value>Bestimmt die Gebühr die dem Kunden für die Nutzung dieser Zahlart berechnet wird.</Value>
   </LocaleResource>
-  <LocaleResource Name="PaymentInfoDescription">
+	<LocaleResource Name="AdditionalFeePercentage">
+		<Value>Zusätzliche Gebühren (prozentual)</Value>
+	</LocaleResource>
+	<LocaleResource Name="AdditionalFeePercentage.Hint">
+		<Value>Zusätzliche prozentuale Gebühr zum Gesamtbetrag. Es wird ein fester Wert verwendet, falls diese Option nicht aktiviert ist.</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentInfoDescription">
     <Value>
       <![CDATA[
         <p>Reservieren Sie Produkte und zahlen Sie an der Kasse in unserem Ladenlokal.<br />Und Hier finden Sie uns: Dortmund, Westenhellweg 88,...</p>
