--- a/src/Plugins/Payments.Sofortueberweisung/Localization/resources.de-de.xml
+++ b/src/Plugins/Payments.Sofortueberweisung/Localization/resources.de-de.xml
@@ -1,31 +1,31 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
-	<!--<LocaleResource Name="Plugins.FriendlyName.Payments.Sofortueberweisung" AppendRootKey="false">
-		<Value>Überweisung</Value>
-	</LocaleResource>-->
+	<LocaleResource Name="Plugins.FriendlyName.Payments.Sofortueberweisung" AppendRootKey="false">
+		<Value>SOFORT Überweisung</Value>
+	</LocaleResource>
 	<LocaleResource Name="AdminInstruction">
 		<Value>
-			<![CDATA[<p>So richten Sie Sofortüberweisung ein:</p>
+			<![CDATA[<p>So richten Sie SOFORT Überweisung ein:</p>
 <ol>
-<li>Loggen Sie sich in Ihr <a href="https://www.sofort-ueberweisung.de/info" target="_blank">Sofortüberweisungskonto</a> ein oder registrieren Sie sich.</li>
+<li>Loggen Sie sich in <a href="https://www.sofort.com/payment/" target="_blank">Ihr Konto bei SOFORT Überweisung</a> ein oder registrieren Sie sich.</li>
 <li>Klicken Sie auf <b>Neues Projekt</b> und dann auf <b>SOFORT-Gateway-Projekt anlegen</b>.</li>
-<li>Tragen Sie die erforderlichen Daten ein und aktivieren Sie die Zahlart <b>Sofortüberweisung</b>. Für die Felder <b>Erfolgs-, Abbruch- und Timeout-Link, sowie HTTP-Benachrichtigung</b> sollten kein Einträge vorgenommen werden.</li>
+<li>Tragen Sie die erforderlichen Daten ein und aktivieren Sie die Zahlart <b>SOFORT Überweisung</b>. Für die Felder <b>Erfolgs-, Abbruch- und Timeout-Link, sowie HTTP-Benachrichtigung</b> sollten kein Einträge vorgenommen werden.</li>
 <li>Nach dem speichern wird unter <b>Allgemeine Einstellungen</b> ein Konfigurationsschlüssel angezeigt, der in den Einstellungen weiter unten als Konfigurationsschlüssel hinterlegt werden muss.</li>
-<li>Optional: Unter <b>Erweiterte Einstellungen</b> kann ein Logo des Shops hinterlegt werden, dass im Terminalfenster von Sofortüberweisung angezeigt wird.</li>
+<li>Optional: Unter <b>Erweiterte Einstellungen</b> kann ein Logo des Shops hinterlegt werden, dass im Terminalfenster von SOFORT Überweisung angezeigt wird.</li>
 </ol>]]>
 		</Value>
 	</LocaleResource>
 	<LocaleResource Name="PaymentNote">
 		<Value>
-			<![CDATA[Sofortüberweisung:
-  Grund: {0}
-  Transaktions-ID: {1}
-  Status (Grund): {2} ({3})
-  Betrag (rückerstattet): {4} {5} ({6})
-  Zahlungsmethode: {7}
-  Gebühr: {8} {9}
-  Kunde E-Mail: {10}
-  Kunde Tel.: {11}
-  Bankverbindung:
+			<![CDATA[SOFORT Überweisung:
+Grund: {0}
+Transaktions-ID: {1}
+Status (Grund): {2} ({3})
+Betrag (rückerstattet): {4} {5} ({6})
+Zahlungsmethode: {7}
+Gebühr: {8} {9}
+Kunde E-Mail: {10}
+Kunde Tel.: {11}
+Bankverbindung:
   Inhaber: {12}
   Kontonummer: {13}
   Bank: {14} ({15})
@@ -33,34 +33,34 @@
 		</Value>
 	</LocaleResource>
 	<LocaleResource Name="RedirectionTip">
-		<Value>Nach Bestätigung der Bestellung werden Sie direkt zu Sofortüberweisung weitergeleitet. Halten Sie bitte Ihre Daten für das Online-Banking bereit.</Value>
+		<Value>Nach Bestätigung der Bestellung werden Sie direkt zu SOFORT Überweisung weitergeleitet. Halten Sie bitte Ihre Daten für das Online-Banking bereit.</Value>
 	</LocaleResource>
 	<LocaleResource Name="InvalidCredentials">
-		<Value>Unvollständige Zugangsdaten für die Web-API von Sofortüberweisung. Bitte geben Sie die erforderlichen Zugangsdaten im Konfigurationsbereich ein.</Value>
+		<Value>Unvollständige Zugangsdaten für die Web-API von SOFORT Überweisung. Bitte geben Sie die erforderlichen Zugangsdaten im Konfigurationsbereich ein.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Order">
 		<Value>Bestellung</Value>
 	</LocaleResource>
 	<LocaleResource Name="SuReportsError">
-		<Value>Sofortüberweisung meldet einen Fehler: </Value>
+		<Value>SOFORT Überweisung meldet einen Fehler: </Value>
 	</LocaleResource>
 	<LocaleResource Name="SuReportsWarning">
-		<Value>Sofortüberweisung meldet eine Warnung: </Value>
+		<Value>SOFORT Überweisung meldet eine Warnung: </Value>
 	</LocaleResource>
 	<LocaleResource Name="SendFailed">
-		<Value>XML-Anfrage konnte nicht an die Sofortüberweisungs-API gesendet werden.</Value>
+		<Value>XML-Anfrage konnte nicht an die API von SOFORT Überweisung gesendet werden.</Value>
 	</LocaleResource>
 	<LocaleResource Name="ModuleFailed">
-		<Value>Sofortüberweisungsmodul kann nicht geladen werden oder ist deaktiviert.</Value>
+		<Value>Das Modul "SOFORT Überweisung" kann nicht geladen werden oder ist deaktiviert.</Value>
 	</LocaleResource>
 	<LocaleResource Name="ParseTotalFailed">
-		<Value>Der durch Sofortüberweisung übermittelte Gesamtbetrag ({0}) konnte nicht ermittelt werden.</Value>
+		<Value>Der durch SOFORT Überweisung übermittelte Gesamtbetrag ({0}) konnte nicht ermittelt werden.</Value>
 	</LocaleResource>
 	<LocaleResource Name="OrderTotalUnequal">
-		<Value>Der durch Sofortüberweisung übermittelte Gesamtbetrag ({0}) entspricht nicht dem des Shops ({1}).</Value>
+		<Value>Der durch SOFORT Überweisung übermittelte Gesamtbetrag ({0}) entspricht nicht dem des Shops ({1}).</Value>
 	</LocaleResource>
 	<LocaleResource Name="ReadNotificationFailed">
-		<Value>Eine durch Sofortüberweisung übermittelte Benachrichtigung konnte nicht gelesen werden.</Value>
+		<Value>Eine durch SOFORT Überweisung übermittelte Benachrichtigung konnte nicht gelesen werden.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Germany">
 		<Value>Deutschland</Value>
@@ -69,13 +69,13 @@
 		<Value>Konfigurationsschlüssel</Value>
 	</LocaleResource>
 	<LocaleResource Name="ApiConfigKey.Hint">
-		<Value>Ihr API-Konfigurationsschlüssel von Sofortüberweisung. Er hat folgendes Format: Kundennummer:Projekt-ID:API-Key</Value>
+		<Value>Ihr API-Konfigurationsschlüssel von SOFORT Überweisung. Er hat folgendes Format: Kundennummer:Projekt-ID:API-Key</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdditionalFee">
 		<Value>Zusätzliche Gebühren</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdditionalFee.Hint">
-		<Value>Zusätzliche Gebühren, die dem Kunden für die Inanspruchnahme von Sofortüberweisung berechnet werden sollen.</Value>
+		<Value>Zusätzliche Gebühren, die dem Kunden für die Inanspruchnahme von SOFORT Überweisung berechnet werden sollen.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdditionalFeePercentage">
 		<Value>Zusätzliche Gebühren (prozentual)</Value>
@@ -87,31 +87,31 @@
 		<Value>Benachrichtigungen erhalten</Value>
 	</LocaleResource>
 	<LocaleResource Name="EnableNotifications.Hint">
-		<Value>Aktivieren Sie diese Option, falls Sie über Änderungen des Zahlungsstatus durch Sofortüberweisung informiert werden möchten.</Value>
+		<Value>Aktivieren Sie diese Option, falls Sie über Änderungen des Zahlungsstatus durch SOFORT Überweisung informiert werden möchten.</Value>
 	</LocaleResource>
 	<LocaleResource Name="CustomerProtection">
 		<Value>Käuferschutz</Value>
 	</LocaleResource>
 	<LocaleResource Name="CustomerProtection.Hint">
-		<Value>Aktivieren Sie diese Option, falls Sie Ihren Kunden den Käuferschutz von Sofortüberweisung einräumen möchten.</Value>
+		<Value>Aktivieren Sie diese Option, falls Sie Ihren Kunden ermöglichen möchten, den Käuferschutz von SOFORT Überweisung zu nutzen. Achten Sie darauf, dass dies in Ihren Projekteinstellungen aktiviert sein muss und hierfür ein SOFORT Bank Konto notwendig ist.</Value>
 	</LocaleResource>
 	<LocaleResource Name="ValidateOrderTotal">
 		<Value>Gesamtbetrag überprüfen</Value>
 	</LocaleResource>
 	<LocaleResource Name="ValidateOrderTotal.Hint">
-		<Value>Aktivieren Sie diese Option, falls der durch Sofortüberweisung übermittelte Gesamtbetrag überprüft werden soll.</Value>
+		<Value>Aktivieren Sie diese Option, falls der durch SOFORT Überweisung übermittelte Gesamtbetrag mit dem Auftragswert abgeglichen werden soll.</Value>
 	</LocaleResource>
 	<LocaleResource Name="SaveWarnings">
 		<Value>Hinweise/Warnungen protokollieren</Value>
 	</LocaleResource>
 	<LocaleResource Name="SaveWarnings.Hint">
-		<Value>Aktivieren Sie diese Option, falls die durch Sofortüberweisung übermittelten Hinweise bzw. Warnungen protokolliert werden sollen.</Value>
+		<Value>Aktivieren Sie diese Option, falls die durch SOFORT Überweisung übermittelten Hinweise bzw. Warnungen protokolliert werden sollen.</Value>
 	</LocaleResource>
 	<LocaleResource Name="UseTestAccount">
 		<Value>Testkonto verwenden</Value>
 	</LocaleResource>
 	<LocaleResource Name="UseTestAccount.Hint">
-		<Value>Aktivieren Sie diese Option, falls Sie eine Zahlung simulieren möchten. Hinterlegen Sie dazu die Daten zu einem gültigen Testkonto von Sofortüberweisung.</Value>
+		<Value>Aktivieren Sie diese Option, falls Sie eine Zahlung simulieren möchten. Hinterlegen Sie dazu die Daten zu einem gültigen Testkonto von SOFORT Überweisung.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AccountHolder">
 		<Value>Kontoinhaber</Value>
@@ -136,5 +136,41 @@
 	</LocaleResource>
 	<LocaleResource Name="AccountCountry.Hint">
 		<Value>Land</Value>
+	</LocaleResource>
+	<LocaleResource Name="ShowFurtherInfo">
+		<Value>Link mit weiteren Infos</Value>
+	</LocaleResource>
+	<LocaleResource Name="ShowFurtherInfo.Hint">
+		<Value>Steuert, ob im Checkout ein Link zu weiteren Informationen angezeigt werden soll.</Value>
+	</LocaleResource>
+	<LocaleResource Name="FurtherInfoUrl">
+		<Value>URL zu weiteren Infos</Value>
+	</LocaleResource>
+	<LocaleResource Name="FurtherInfoUrl.Hint">
+		<Value>URL zu weiteren Informationen über SOFORT Überweisung. Wird optional im Checkout verwendet.</Value>
+	</LocaleResource>
+	<LocaleResource Name="FurtherInfos">
+		<Value>Weitere Informationen...</Value>
+	</LocaleResource>
+	<LocaleResource Name="CustomerProtectionInfoUrl">
+		<Value>URL zu Käuferschutzinfos</Value>
+	</LocaleResource>
+	<LocaleResource Name="CustomerProtectionInfoUrl.Hint">
+		<Value>URL zu weiteren Informationen zum Käuferschutz zu SOFORT Überweisung. Wird optional im Checkout verwendet.</Value>
+	</LocaleResource>
+	<LocaleResource Name="CustomerProtectionInfo">
+		<Value>Informationen zum Käuferschutz von SOFORT Überweisung</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentReason1">
+		<Value>Verwendungszweck 1</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentReason1.Hint">
+		<Value>Der erste Verwendungszweck für Zahlungen. Es sind maximal 27 Zeichen möglich. Längere Zeichenketten werden abgeschnitten.</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentReason2">
+		<Value>Verwendungszweck 2</Value>
+	</LocaleResource>
+	<LocaleResource Name="PaymentReason2.Hint">
+		<Value>Der zweite Verwendungszweck für Zahlungen. Es sind maximal 27 Zeichen möglich. Längere Zeichenketten werden abgeschnitten.</Value>
 	</LocaleResource>
 </Language>
