--- a/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
@@ -16,7 +16,7 @@
     <Value>Das Bestimmungsland. Wählen Sie Stern (*), wenn das Land des Kunden bei der Auswertung keine Rolle spielen soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.StateProvince">
-    <Value>Bundesland/Region</Value>
+    <Value>Region</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.StateProvince.Hint">
     <Value>Bundesland/Region/Kanton des Kunden. Wählen Sie Stern (*), wenn die Gebühr unabhängig von Region für alle Kunden im definierten Land gelten soll.</Value>
@@ -46,19 +46,19 @@
     <Value>Die Bedingung trifft zu, wenn der Bestellwert im Warenkorb kleiner als dieser Wert ist. Lassen Sie das Feld leer, wenn Sie keine Obergrenze festlegen möchten.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.UsePercentage">
-    <Value>Als Prozentwert</Value>
+    <Value>Prozentual</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.UsePercentage.Hint">
     <Value>Legt fest, ob die Versandgebühr prozentual vom Bestellwert berechnet werden soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargePercentage">
-    <Value>Versandgebühr % (vom Bestellwert)</Value>
+    <Value>Gebühr %</Value>
   </LocaleResource>
   <!--<LocaleResource Name="Fields.ShippingChargePercentage.Hint">
     <Value>Charge percentage (of subtotal)</Value>
   </LocaleResource>-->
   <LocaleResource Name="Fields.ShippingChargeAmount">
-    <Value>Versandgebühr</Value>
+    <Value>Gebühr</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargeAmount.Hint">
     <Value>Die Versandgebühr als absoluter Betrag</Value>
@@ -68,5 +68,24 @@
   </LocaleResource>
   <LocaleResource Name="Fields.LimitMethodsToCreated.Hint">
     <Value>Dem Kunden wird während des Checkouts kostenloser Versand als Fallback angeboten, wenn keine der festgelegten Bedingungen zutreffen. Aktivieren Sie diese Option, wenn das nicht gewünscht ist.</Value>
+  </LocaleResource>
+
+  <LocaleResource Name="Fields.BaseCharge">
+    <Value>Basisgebühr</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.MaxCharge">
+    <Value>Max. Gebühr</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.MaxCharge.Hint">
+    <Value>Ein Betrag, den die berechneten Versandkosten nicht übersteigen dürfen.</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.SmallQuantityThreshold">
+    <Value>Mindermenge bis Bestellwert</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.SmallQuantityThreshold.Hint">
+    <Value>Warenwert, bis zu dem ein Mindermengenzuschlag erhoben werden soll. Der Zuschlag wird ignoriert, wenn keine Versandkosten anfallen. Verwenden Sie "0", wenn kein Zuschlag erhoben werden soll.</Value>
+  </LocaleResource>
+  <LocaleResource Name="Fields.SmallQuantitySurcharge">
+    <Value>Mindermengenzuschlag</Value>
   </LocaleResource>
 </Language>
