Multi-store support for ShippingByTotal plugin

--- a/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
@@ -88,4 +88,10 @@
   <LocaleResource Name="Fields.SmallQuantitySurcharge">
     <Value>Mindermengenzuschlag</Value>
   </LocaleResource>
+	<LocaleResource Name="Fields.Store">
+		<Value>Shop</Value>
+	</LocaleResource>
+	<LocaleResource Name="Fields.Store.Hint">
+		<Value>Wird das Sternchen ausgewählt, so wird die Rate auf alle Shops angewandt.</Value>
+	</LocaleResource>
 </Language>
