--- a/src/Plugins/Shipping.ByTotal/Localization/resources.en-us.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.en-us.xml
@@ -88,4 +88,10 @@
   <LocaleResource Name="Fields.SmallQuantitySurcharge">
     <Value>Surcharge for small quantities</Value>
   </LocaleResource>
+	<LocaleResource Name="Fields.Store">
+		<Value>Store</Value>
+	</LocaleResource>
+	<LocaleResource Name="Fields.Store.Hint">
+		<Value>If an asterisk is selected, then this shipping rate will apply to all stores.</Value>
+	</LocaleResource>
 </Language>
