--- a/src/Plugins/DiscountRules.Store/Localization/resources.de-de.xml
+++ b/src/Plugins/DiscountRules.Store/Localization/resources.de-de.xml
@@ -1,6 +1,6 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
 	<LocaleResource Name="Plugins.FriendlyName.DiscountRequirement.Store" AppendRootKey="false">
-		<Value>Auf Shop begrenzt</Value>
+		<Value>Auf bestimmten Shop begrenzt</Value>
 	</LocaleResource>
 	<LocaleResource Name="Fields.SelectStore">
 		<Value>Shop auswählen</Value>
